tests/syntactic/printsize_directive2/printsize_directive2.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2017, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

.decl A(x:number)
.decl B(x:number)
.decl C(x:number)

.printsize C
.printsize A,B,C
